--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html class="rwd">
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <title>CrestWave Store</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="eCommerce" name="keywords">
+    <meta content="eCommerce" name="description">
+
     <style data-merge-styles="true"></style>
     <script type="text/javascript" src="https://s.alicdn.com/@i/sc-affiliate/sem-remarketing/??sem-remarketing.98174a0b.js"></script>
     <script async="" src="https://g.alicdn.com/secdev/sufei_data/3.9.14/index.js" crossorigin="true"></script>
